#180: DocumentEntry.URI is just an URI